# Github-Action-JFrog

./: .releaserc.mjs  CHANGELOG.md  Dockerfile  app.py  pom.xml  pyproject.toml  pytest.ini  release.config.js  release.config.jste  setup.py  test.py  version.txt
.github/workflows/: .branch-creation.yaml  .docker-build-promote.yml  .release.yml  artifact-cleanup.yaml  branch-creation.yaml  build_and_deploy.yml  ci-get-release.yml  docker-build-promote.yml  final-build.yaml  generic-branch.yaml  maven.yaml  new-versioning.yaml  poetry-workflow.yml  release.yml  semantic-versioning.yaml
config/: cleanup-config-1.yml  cleanup_config.yml
tests/e2e/: pyproject.toml  pytest.ini  test_e2e.py
tests/integration/: test_integration.py
tests/unit/: test_example.py
