[tool.poetry]
name = "test"
version = "0.1.0"
description = "A short description of your project"
authors = ["pacific.prashantdubey@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.9"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
